--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,9 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.duxetech.vinayakarpuranam.MainActivity">
     <item
-        android:id="@+id/font"
+        android:id="@+id/increaseFont"
         android:orderInCategory="100"
-        android:title="Font"
+        android:title="Font ++"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/decreaseFont"
+        android:orderInCategory="100"
+        android:title="Font --"
         app:showAsAction="never" />
     <item
         android:id="@+id/about"
